Fix text-align not being right about.html

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,7 +243,7 @@ table { /*Lachlan*/
     float:right;
 }
 .about_section_id{ /*For student id */
-    text-align: center; /*This class was originally made by matthew, edited by lachlan*/
+    text-align: right; /*This class was originally made by matthew, edited by lachlan*/
 }
 
 .about_background {
